# pinpad-issue-detection-system

./: .env.example  .gcloudignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
infra/: bootstrap.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/pinpad_analyzer/: __init__.py  __main__.py
src/pinpad_analyzer/agent/: __init__.py  __main__.py  config.py  uploader.py  watcher.py
src/pinpad_analyzer/assistant/: case_db.py  diagnosis.py  domain_knowledge.py  evidence_builder.py  pattern_library.py  query_engine.py
src/pinpad_analyzer/cli/: app.py
src/pinpad_analyzer/cli/commands/: analyze.py  cases.py  diagnose.py  ingest.py  retrain.py  status.py  train.py
src/pinpad_analyzer/cloud/: __init__.py  __main__.py  gcs_watcher.py  processor.py  pubsub_handler.py
src/pinpad_analyzer/config/: issue_types.py
src/pinpad_analyzer/features/: transaction_features.py
src/pinpad_analyzer/ingestion/: file_reader.py  metadata_extractor.py  models.py  parser.py  repeat_expander.py
src/pinpad_analyzer/ml/: anomaly.py  inference.py  labeler.py  registry.py  rules.py  training.py
src/pinpad_analyzer/reporting/: report_generator.py
src/pinpad_analyzer/segmentation/: error_cascade.py  health_segmenter.py  models.py  state_machine.py  transaction_segmenter.py
src/pinpad_analyzer/storage/: database.py  repositories.py  schema.py
tests/: conftest.py  test_assistant.py  test_ml.py  test_parser.py  test_segmentation.py  test_storage.py
